<resources>
    <string name="app_name">Just java</string>
    <string name="text_view_toppings">Toppings</string>
    <string name="text_view_quantity">Quantity</string>
    <string name="minus_button_text">-</string>
    <string name="quantity_text_view_text">0</string>
    <string name="plus_button_text">+</string>
    <string name="text_view_order_summary">Order summary</string>
    <string name="plus_button_order">Order</string>
    <string name="whisky">Whisky</string>
    <string name="user">Name: </string>
    <string name="add_whisky">Add whisky? true</string>
    <string name="quantity">Quantity:</string>
    <string name="total">Total:</string>
    <string name="thanks">Thank you!</string>
    <string name="rhum">Rhum</string>
    <string name="add_rhum">Add rhum? true</string>
    <string name="name">Name</string>
    <string name="max_coffe_reached">Maximum number of coffe reached</string>
    <string name="min_coffe_reached">Minimun number of coffe reached</string>
</resources>
