<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
                  android:orientation="vertical"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:paddingBottom="@dimen/activity_vertical_margin"
                  android:paddingLeft="@dimen/activity_horizontal_margin"
                  android:paddingRight="@dimen/activity_horizontal_margin"
                  android:paddingTop="@dimen/activity_vertical_margin">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:id="@+id/edit_text_name"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_view_toppings"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:textSize="@dimen/text_view_text_size_medium"
                android:textAllCaps="true"/>
            <CheckBox
                android:id="@+id/whisky_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/activity_margin_medium"
                android:text="@string/whisky"
                android:textSize="@dimen/text_view_text_size_small"
                />
            <CheckBox
                android:id="@+id/rhum_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_margin_medium"
                android:text="@string/rhum"
                android:textSize="@dimen/text_view_text_size_small"
                />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="true"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:text="@string/text_view_quantity"
            android:textSize="@dimen/text_view_text_size_medium"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_horizontal_margin">

            <Button
                android:layout_width="@dimen/quantity_button_size"
                android:layout_height="@dimen/quantity_button_size"
                android:text="@string/minus_button_text"
                android:onClick="decrement"/>

            <TextView
                android:id="@+id/quantity_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_view_text_size_small"
                android:layout_marginLeft="@dimen/activity_margin_small"
                android:layout_marginRight="@dimen/activity_margin_small"
                android:textColor="@color/black"
                android:text="@string/quantity_text_view_text"/>

            <Button
                android:layout_width="@dimen/quantity_button_size"
                android:layout_height="@dimen/quantity_button_size"
                android:text="@string/plus_button_text"
                android:onClick="increment"/>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="true"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:text="@string/text_view_order_summary"
            android:textSize="@dimen/text_view_text_size_medium"/>

        <TextView
            android:id="@+id/order_summary_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_view_text_size_small"
            android:textColor="#000"
            android:text="@string/quantity_text_view_text"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/plus_button_order"
            android:onClick="submitOrder"/>
    </LinearLayout>
</ScrollView>